--- a/_includes/nav.liquid
+++ b/_includes/nav.liquid
@@ -1,22 +1,15 @@
 <header class="nav">
 	<nav>
-		<div class="nav-header layout-wrapper">
-			<button class="nav-toggle" title="Toggle the Menu">
-				<span></span>
-				<span></span>
-				<span></span>
-			</button>
-		</div>
 		<div class="nav-list">
 			<ul class="layout-wrapper">
 				<li>
-					<a href="/home">
+					<a href="home">
 						Home
 					</a>
 				</li>
 				<li>
 					<a href="/home#about-us">
-						About
+						Blog
 					</a>
 				</li>
 				<li>
