--- a/_layouts/post.liquid
+++ b/_layouts/post.liquid
@@ -4,9 +4,7 @@ layout: base.liquid
 <article class="post post-full alignwide">
 
 	<header>
-		{% if image and description %}
-		{% image image description 'post-image' %}
-	{% endif %}
+		{% include 'post-image.liquid' %}
 		<h1>{{title}}</h1>
 		<div class="semibold">
 			{{ author }}&nbsp;&nbsp;|&nbsp;&nbsp;<time datetime="{{ date | date: '%Y-%m-%d' }}" >{{ date | date: "%b %e, %Y" }}</time>
