--- a/_layouts/base.liquid
+++ b/_layouts/base.liquid
@@ -72,7 +72,8 @@ Have a great day!
 		<link rel="stylesheet" href="/assets/css/style.css" />
 	</head>
 	<body class="layout">
-	{{ content }}
-	{% include 'scripts' %}
+		{% include 'nav' %}
+		{{ content }}
+		{% include 'scripts' %}
 	</body>
 </html>
