--- a/assets/scss/pages/posts.scss
+++ b/assets/scss/pages/posts.scss
@@ -31,45 +31,40 @@
 }
 
 .post-image {
+	background-color: var(--color-accent);
+	display: flex;
+	flex: 1 1 100%;
 	overflow: hidden;
+	position: relative;
 	border-radius: var(--border-radius);
-	img {
-		width: 100%;
+
+	&::before {
+		background-color: var(--color-secondary);
+		bottom: 0;
+		content: "";
 		height: 100%;
+		left: 0;
+		mix-blend-mode: screen;
+		position: absolute;
+		right: 0;
+		top: 0;
+		width: 100%;
+		z-index: 1;
+	}
+	img {
+		filter: grayscale(100%) brightness(1) contrast(1);
+		flex: 1 0 100%;
+		height: 100%;
+		max-width: 100%;
+		mix-blend-mode: darken;
 		object-fit: cover;
+		opacity: 1;
+		position: relative;
+		width: 100%;
 	}
 }
-.post-details {
+
+.post-image .post-details {
 	margin: 0.25rem 0;
 	color: var(--color-ui-intense);
-}
-
-.post-teaser {
-	display: grid;
-	grid-template-areas: "content image" "tags tags";
-	grid-template-columns: 3fr 1fr;
-	gap: var(--space-sm);
-	font-size: 0.85rem;
-
-	@include md-and-up {
-		column-gap: var(--space-md);
-	}
-
-	h3 {
-		font-size: 1.25rem;
-		margin: 0;
-	}
-	header {
-		grid-area: content;
-	}
-	.post-description {
-		margin-top: 0.75rem;
-	}
-	.post-image {
-		grid-area: image;
-	}
-	.tag-list {
-		grid-area: tags;
-		margin: 0;
-	}
 }
